--- a/bike_sharing_demand_prediction.ipynb
+++ b/bike_sharing_demand_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZi4xQr7sWBVKi0ntt2o+0",
+      "authorship_tag": "ABX9TyPwGASy0jM0m34zCnmvCLvx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,56 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/SomyaH99/Bike-Sharing-Demand-Prediction-/blob/main/bike_sharing_demand_prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# <b><u> Project Title : Seoul Bike Sharing Demand Prediction </u></b>\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "GOQ3N0xMe56R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## <b> Problem Description </b>\n",
+        "\n",
+        "### Currently Rental bikes are introduced in many urban cities for the enhancement of mobility comfort. It is important to make the rental bike available and accessible to the public at the right time as it lessens the waiting time. Eventually, providing the city with a stable supply of rental bikes becomes a major concern. The crucial part is the prediction of bike count required at each hour for the stable supply of rental bikes.\n"
+      ],
+      "metadata": {
+        "id": "Cw_BKztQe99d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## <b> Data Description </b>\n",
+        "\n",
+        "### <b> The dataset contains weather information (Temperature, Humidity, Windspeed, Visibility, Dewpoint, Solar radiation, Snowfall, Rainfall), the number of bikes rented per hour and date information.</b>\n",
+        "\n",
+        "\n",
+        "### <b>Attribute Information: </b>\n",
+        "\n",
+        "* ### Date : year-month-day\n",
+        "* ### Rented Bike count - Count of bikes rented at each hour\n",
+        "* ### Hour - Hour of he day\n",
+        "* ### Temperature-Temperature in Celsius\n",
+        "* ### Humidity - %\n",
+        "* ### Windspeed - m/s\n",
+        "* ### Visibility - 10m\n",
+        "* ### Dew point temperature - Celsius\n",
+        "* ### Solar radiation - MJ/m2\n",
+        "* ### Rainfall - mm\n",
+        "* ### Snowfall - cm\n",
+        "* ### Seasons - Winter, Spring, Summer, Autumn\n",
+        "* ### Holiday - Holiday/No holiday\n",
+        "* ### Functional Day - NoFunc(Non Functional Hours), Fun(Functional hours)"
+      ],
+      "metadata": {
+        "id": "CqqI45SOfBdr"
+      }
     },
     {
       "cell_type": "code",
